--- a/style.css
+++ b/style.css
@@ -122,6 +122,7 @@ body {
 .blacktext {
   color: white;
   font-size: 40px;
+  text-align: center;
 }
 
 .nature {
@@ -140,13 +141,35 @@ body {
 
 @media (max-width: 768px) {
   .cube {
-    width: 100px;
-    height: 100px;
+    width: 200px;
+    height: 200px;
   }
   :root {
-    --translate: 50px;
+    --translate: 100px;
+  }
+  .acide {
+    font-size: 18px;
+  }
+  .redbtn {
+    margin-top: 10px;
+    width: 50px;
+    height: 50px;
+  }
+}
+
+@media (max-width: 425px) {
+  .cube {
+    width: 150px;
+    height: 150px;
+  }
+  :root {
+    --translate: 75px;
   }
   .acide {
     font-size: 16px;
+  }
+  .redbtn {
+    width: 30px;
+    height: 30px;
   }
 }
